--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ nav, section, .section-divider, footer {
 .back-top:hover { color: var(--blue); }
 
 /* ?? SECTIONS ???????????????????????????????????????? */
-.alle-section { padding: 60px 0 80px; }
+.alle-section { padding: 10px 0 80px; }
 
 /* ?? SCROLL REVEAL ??????????????????????????????????? */
 .reveal { opacity: 0; transform: translateY(22px); transition: opacity 0.55s ease, transform 0.55s ease; }
@@ -176,3 +176,124 @@ nav, section, .section-divider, footer {
   \$$\ __/   \                                                             
    \$$$    $$$                                                             
      \$$$$$$    */
+
+
+     
+
+
+
+/* apagar isso aqui */
+/* ===================== MAINTENANCE POPUP ===================== */
+
+.maintenance-overlay {
+
+  position: fixed;
+  inset: 0;
+
+  z-index: 999999;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  backdrop-filter: blur(14px);
+
+  background: rgba(248,245,239,0.35);
+}
+
+.maintenance-popup {
+
+  width: min(90%, 500px);
+
+  padding: 40px 30px;
+
+  border: 1.5px solid rgba(26,26,46,0.18);
+
+  border-radius: 24px;
+
+  background: rgba(59, 59, 59, 0.82);
+
+  backdrop-filter: blur(20px);
+
+  text-align: center;
+
+  box-shadow:
+    0 10px 40px rgba(0,0,0,0.08);
+
+  animation: popupAppear 0.6s cubic-bezier(.2,.8,.2,1);
+}
+
+.close-popup {
+
+  position: relative;
+
+  top: 14px;
+  right: 18px;
+
+  border: none;
+  background: transparent;
+
+  font-size: 2rem;
+
+  cursor: pointer;
+
+  color: var(--ink);
+
+  transition: 0.2s ease;
+}
+
+.close-popup:hover {
+
+  transform: scale(1.1);
+
+  opacity: 0.7;
+}
+
+.maintenance-popup h1 {
+
+  font-family: "Schoolbell", cursive;
+
+  font-size: clamp(2rem, 4vw, 3rem);
+
+  color: var(--ink);
+
+  margin-bottom: 0;
+  min-height: 4rem;   
+
+  line-height: 1.2;
+}
+
+.maintenance-gif {
+
+  width: min(100%, 320px);
+
+  border-radius: 18px;
+
+  display: block;
+
+  margin: 0 auto;
+}
+
+@keyframes popupAppear {
+
+  from {
+
+    opacity: 0;
+
+    transform:
+      translateY(20px)
+      scale(0.96);
+
+  }
+
+  to {
+
+    opacity: 1;
+
+    transform:
+      translateY(0)
+      scale(1);
+
+  }
+}
+/* apagar acima */
